Fixing dark mode

--- a/src/vlbiplanobs/gui/assets/css/soft-ui-dashboard.css
+++ b/src/vlbiplanobs/gui/assets/css/soft-ui-dashboard.css
@@ -5543,7 +5543,7 @@ fieldset:disabled .btn {
   padding: var(--bs-card-cap-padding-y) var(--bs-card-cap-padding-x);
   margin-bottom: 0;
   color: var(--bs-card-cap-color);
-  background-color: var(--bs-card-cap-bg);
+  /* background-color: var(--bs-card-cap-bg); */
   border-bottom: var(--bs-card-border-width) solid var(--bs-card-border-color);
 }
 
@@ -5554,7 +5554,7 @@ fieldset:disabled .btn {
 .card-footer {
   padding: var(--bs-card-cap-padding-y) var(--bs-card-cap-padding-x);
   color: var(--bs-card-cap-color);
-  background-color: var(--bs-card-cap-bg);
+  /* background-color: var(--bs-card-cap-bg); */
   border-top: var(--bs-card-border-width) solid var(--bs-card-border-color);
 }
 
